# cbot

./: .gitignore  pyproject.toml
cbot/: exchangecomms.py  matrixComms.py
tests/: test_cbot.py
